Change contact information
Change into fictional information

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -6,9 +6,9 @@
   <body>
     <h3>How to Contact me</h3>
     <ul>
-      <li>Email: a36210507@gmail.com</li>
-      <li>Mobile: 0983558777</li>
-      <li>Address: 新北市竹林路191巷226號</li>
+      <li>Email: a362210507@gmail.com</li>
+      <li>Mobile: +886 983558777</li>
+      <li>Address: The fictional address</li>
     </ul>
 
     <hr>
