Rewrite the whole page

--- a/index.html
+++ b/index.html
@@ -1,99 +1,92 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="This is the description">
-    <title>This is Jay's personal site</title>
+    <title>Jay Cao</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-
   <body>
-    <table  cellspacing="20">
+
+    <table>
       <tr>
-        <td><img src="images/profile_picture.jpg" alt="Jay profile picture"></td>
-        <td>
-          <h1>Cheng Fu Cao (Jay)</h1>
-          <p><em><a href="https://www.harbortech.com.tw/" target="_blank">Harbortech</a> Hardware Test Engineer.</em></p>
-          <p>I am a graduated student and I love drawing. Milktea is my favorite drink.</p>
+        <td><img src="images/profile-photo.png" alt="profile-photo" width="200px" height="200px"></td>
+        <td class="profile">
+          <h1 class="heading">Jay Cao</h1>
+          <p>Intern of <a href="https://www.harbortech.com.tw/" target="_blank">Harbortech</a> Hardware Test Engineer <br>
+          Studying in National Taipei Unversity of Technology <a href="https://www.ntut.edu.tw/" target="_blank">(NTUT).</a><br>
+          I am interesting in image processing, artificial intelligence (AI) and embed system. <br>
+          I am currently learning web development and Arduino. Reading and drawing are my hobbies, I also like to go hiking or riding bike in weekend.</p>
         </td>
       </tr>
     </table>
 
+  <hr>
+  <h3 class="heading">Education</h3>
+  <ul>
+    <li>National Taipei Unversity of Technology</li>
+    <li>National Hsinhua Industrial Vocational High School</li>
+  </ul>
 
+  <hr>
+  <h3 class="heading">Work Experience</h3>
+  <table>
+    <thead>
+      <th>Date</th>
+      <th>Work</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Feb. 2021 - June. 2021</td>
+        <td>Intern of Harbortech Hardware Test Engineer</td>
+      </tr>
+      <tr>
+        <td>Feb. 2020 - Dec. 2020</td>
+        <td>Part-time worker in NTUT Computer and Network Center <a href="https://cnc.ntut.edu.tw/" target="_blank">(CNC)</a></td>
+      </tr>
+      <tr>
+        <td>May. 2020 - May. 2021</td>
+        <td>Researcher of University of Cincinnti (UC)</td>
+      </tr>
+    </tbody>
+    <tfoot>
+    </tfoot>
+  </table>
 
-    <hr>
+  <hr>
+  <h3 class="heading">Skills</h3>
+  <table>
+    <td class="inTable">
+      <table>
+        <tr>
+          <td>Image Processing</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Machine Learning</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+      </table>
+    </td>
+    <td class="inTable">
+      <table>
+        <tr>
+          <td>Embed System</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Circuit Designing</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+      </table>
+    </td>
+  </table>
 
-    <h3>Education</h3>
-    <ul>
-      <li>
-        National Taipei Unversity of Technology <strong><a href="https://www.ntut.edu.tw/" target="_blank">(NTUT)</a></strong>.
-      </li>
-      <li>National Hsinhua Industrial Vocational High School</li>
-    </ul>
+  <hr>
+  <a href="contact-me.html" target="_blank">Contact Me</a>
 
-    <hr>
+  <p>Latest Update at 19 May, 2021.</p>
 
-    <h3>Work Experience</h3>
-    <table>
-      <thead>
-          <th>Date</th>
-          <th>Work</th>
-      </thead>
-      <tbody>
-          <tr>
-            <td>2021/03-Now</td>
-            <td>Harbortech Hardware Testing Engineer</td>
-          </tr>
-          <tr>
-            <td>2020/02-2020/12</td>
-            <td>CNC part time job</td>
-          </tr>
-      </tbody>
-      <tfoot>
-
-      </tfoot>
-    </table>
-
-    <hr>
-
-    <h3>Skills</h3>
-    <table>
-      <td>
-        <table>
-          <tr>
-            <td>Embed System</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Image Processing</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>English</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Data Analysis</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-
-    </table>
-
-
-
-    <hr>
-
-    <a href="hobbies.html" target="_blank">My Hobbies</a>
-    <a href="Contact Information.html" target="_blank">How to Contact me</a>
 
 
   </body>
-
 </html>
